fixed forma en que se muestran las keywords, ya no hacen overflow

--- a/media/styles/videototext/videototext.css
+++ b/media/styles/videototext/videototext.css
@@ -216,6 +216,7 @@ body {
     flex: 1 1;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     gap: 6px;
 
     list-style: none;
